--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,5 +1,27 @@
 // variables background:
+$white: #ffffff;
+$gray1: #FAFAFA;
 
+// loading:
+$loading: #000000e0;
+$red: #ff0000;
+$blue: #0015ff;
+
+// color btn:
+$search: #6378ff;
+$reset: #ffc934;
+
+
+// shodow:
+$shodow: #000;
+$alpha: .3;
+
+
+
+// variables color text:
+$text: #1a1a1a;
+$text2: #474747;
+$text3: #fff;
 
 
 // variables color text:
