add search bar in header component

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,6 +1,8 @@
 // variables background:
-$white: #ffffff;
-$gray1: #FAFAFA;
+$black: #2c2c2c;
+$gray: #5e5e5e;
+$red: #de0f0f;
+$white: #ede2e2;
 
 // loading:
 $loading: #000000e0;
@@ -8,20 +10,17 @@ $red: #ff0000;
 $blue: #0015ff;
 
 // color btn:
-$search: #6378ff;
-$reset: #ffc934;
+$search: #ff6363;
+$reset: #ffbb00;
 
 
 // shodow:
 $shodow: #000;
 $alpha: .3;
 
-
-
 // variables color text:
-$text: #1a1a1a;
-$text2: #474747;
-$text3: #fff;
+$text: #ede2e2;
+$text2: #5e5e5e;
+$text3: #de0f0f;
+$text4: #2c2c2c;
 
-
-// variables color text:
