completed the style

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,3 +6,8 @@
 @use './partials/extende' as *;
 @use './partials/mixin' as *;
 @use './partials/common' as *;
+
+
+body {
+    @include checkerboard(15px, $gray, $ligthGray)
+}
