--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -3,6 +3,7 @@ $black: #2c2c2c;
 $gray: #5e5e5e;
 $red: #de0f0f;
 $white: #ede2e2;
+$ligthGray: #aaa;
 
 // loading:
 $loading: #000000e0;
@@ -16,7 +17,7 @@ $reset: #ffbb00;
 
 // shodow:
 $shodow: #000;
-$alpha: .3;
+$alpha: .5;
 
 // variables color text:
 $text: #ede2e2;
