including stars for ratings and add other flags

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -11,9 +11,11 @@ $red: #ff0000;
 $blue: #0015ff;
 
 // color btn:
-$search: #ff6363;
-$reset: #ffbb00;
+$search: #5e5e5e;
+$reset: #ff6363;
 
+// stars:
+$stars: #ffdd00e7;
 
 // shodow:
 $shodow: #000;
